environments/production/codebloom/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: codebloom-web
  namespace: production
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`k8s.codebloom.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: codebloom
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: codebloom-websecure
  namespace: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k8s.codebloom.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: codebloom
          port: 80
  tls:
    certResolver: letsencrypt
